# udpclust

./: .gitignore  .gitmodules  CMakeLists.txt  ClustDep2.py  DPA_modules.f90  Makefile  README.md  UDPClust.py  UDP_functions.py  UDP_modules.f90  cluster_dmat.py  clustering.py  clustering_and_assign.py  critfile.f90  critfile.py  density.py  larod.py  msm-its.py  my_larod.py  notes.txt  readme.txt  setup.py  twonn.py
UDP_modules/: __init__.py
notebooks/: Density-calculation.ipynb  Untitled.ipynb
src/: cluster.cpp  heap_sort.h  module.cpp  types.h  udpclust.h
test/: .gitignore  check.sh  clustering.py  dino_clustering.py  err  log  my_borders_pre_merge  my_centers_premerge  report.txt  reset.sh  test-assign.sh  test-its.sh  test-sens.sh  test.sh  test2.sh  test_dpa.sh  test_rmsd.sh
test/DATA/: traj-d.dat.dpc
